--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "gulp-shell": "0.8.0",
     "lodash": "4.17.5",
     "node-sass": "4.13.1",
-    "npm": "^6.9.0",
+    "npm": "^8.2.0",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
     "vue-cookie": "1.1.4",
+    "vue-core-image-upload": "^2.4.13",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
